# nodedb-lite

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
docs/: lite.md  (+3 more)
nodedb-lite/: Cargo.toml
nodedb-lite-wasm/: Cargo.toml  README.md
nodedb-lite-wasm/src/: array.rs  lib.rs  opfs_backend.rs
nodedb-lite-wasm/tests/: array.rs  browser.rs  smoke.rs
nodedb-lite/docs/: lite-sql-support.md
nodedb-lite/examples/: live_sync.rs  load_test.rs
nodedb-lite/src/: config.rs  error.rs  event.rs  lib.rs  runtime.rs  sequence.rs
nodedb-lite/src/engine/: mod.rs
nodedb-lite/src/engine/array/: catalog.rs  engine.rs  manifest.rs  memtable.rs  mod.rs  retention.rs  segments.rs
nodedb-lite/src/engine/array/ops/: aggregate.rs  compact.rs  elementwise.rs  mod.rs  project.rs
nodedb-lite/src/engine/columnar/: store.rs
nodedb-lite/src/engine/crdt/: engine.rs  policy.rs
nodedb-lite/src/engine/document/: mod.rs
nodedb-lite/src/engine/fts/: analyzer.rs  checkpoint.rs  manager.rs  mod.rs  search.rs  state.rs
nodedb-lite/src/engine/graph/: history.rs  mod.rs
nodedb-lite/src/engine/htap/: bridge.rs
nodedb-lite/src/engine/sparse_vector/: checkpoint.rs  index.rs  manager.rs  mod.rs  state.rs
nodedb-lite/src/engine/spatial/: checkpoint.rs  index.rs  mod.rs
nodedb-lite/src/engine/strict/: arrow.rs  crud.rs  engine.rs  history.rs  mod.rs  schema.rs  tests.rs
nodedb-lite/src/engine/timeseries/: identity.rs  query_routing.rs
nodedb-lite/src/engine/vector/: mod.rs  pagedb_backing.rs  search.rs  state.rs
nodedb-lite/src/nodedb/: array.rs  batch.rs  convert.rs  core.rs  definitions.rs  diagnostic.rs  graph_rag.rs  health.rs  mod.rs  sync_delegate.rs  trait_impl.rs
nodedb-lite/src/nodedb/collection/: bulk.rs  ddl.rs  import.rs  kv.rs  transaction.rs
nodedb-lite/src/nodedb/core/: auto_compact.rs  auto_flush.rs  flush.rs  mod.rs  open.rs  ops.rs  sparse_ops.rs  types.rs
nodedb-lite/src/nodedb/sync_delegate/: array_handlers.rs  definition_apply.rs  delegate_impl.rs  import_collection_schema.rs  mod.rs
nodedb-lite/src/nodedb/trait_impl/: crdt_list.rs  dispatch.rs  document.rs  document_batch.rs  graph.rs  mod.rs  sql_lifecycle.rs  vector.rs
nodedb-lite/src/query/: catalog.rs  coerce.rs  columnar_dml.rs  engine.rs  engine_dml.rs  expr_convert.rs  filter_convert.rs  mod.rs  msgpack_helpers.rs  strict_dml.rs  value_utils.rs
nodedb-lite/src/query/columnar_ops/: reads.rs  writes.rs
nodedb-lite/src/query/crdt_ops/: doc_row.rs  list.rs  mod.rs  read.rs  version.rs  write.rs
nodedb-lite/src/query/ddl/: alter.rs  columnar.rs  continuous_agg.rs  convert.rs  dispatch.rs  document.rs  engine_meta.rs  htap.rs  kv.rs  mod.rs  strict.rs  tests.rs  timeseries.rs
nodedb-lite/src/query/document_ops/: indexes.rs  mod.rs  reads.rs  sets.rs  writes.rs
nodedb-lite/src/query/graph_ops/: algorithms.rs  edges.rs  fusion.rs  labels.rs  mod.rs  stats.rs  temporal.rs  traversal.rs
nodedb-lite/src/query/kv_ops/: indexes.rs  mod.rs  reads.rs  sorted.rs  writes.rs
nodedb-lite/src/query/meta_ops/: array.rs  continuous_agg.rs  distributed.rs  indexes.rs  info.rs  lifecycle.rs  mod.rs  synonyms.rs  temporal.rs
nodedb-lite/src/query/physical_visitor/: adapter.rs  mod.rs  text_op.rs  unsupported.rs  vector_op.rs  vector_write.rs
nodedb-lite/src/query/query_ops/: aggregate.rs  facets.rs  lateral_loop.rs  lateral_top_k.rs  mod.rs  recursive_scan.rs  recursive_value.rs
nodedb-lite/src/query/spatial_ops/: mod.rs  reads.rs  writes.rs
nodedb-lite/src/query/timeseries_ops/: reads.rs  writes.rs
nodedb-lite/src/query/visitor/: adapter.rs  dml.rs  having_eval.rs  kv.rs  lateral.rs  mod.rs  queries.rs  recursive.rs  scan_post.rs  search.rs  set_ops.rs  timeseries.rs  unsupported.rs  vector_primary.rs
nodedb-lite/src/storage/: array_segment_ext.rs  checksum.rs  columnar_segment_ext.rs  encrypted.rs  encryption.rs  engine.rs  fts_segment_ext.rs  graph_segment_ext.rs  mod.rs  pagedb_storage.rs  pagedb_storage_columnar.rs  pagedb_storage_fts.rs  pagedb_storage_graph.rs  pagedb_storage_spatial.rs  redb_storage.rs  spatial_segment_ext.rs  vector_segment_ext.rs
nodedb-lite/src/sync/: collection_schema_builder.rs  constants.rs  flow_control.rs  mod.rs  stream_seq.rs  transport.rs
nodedb-lite/src/sync/array/: ack_sender.rs  catchup.rs  mod.rs  op_log_redb.rs  op_log_store.rs  outbound.rs  pending.rs  replica_state.rs  schema_registry.rs
nodedb-lite/src/sync/client/: config.rs  delta.rs  handshake.rs  maintenance.rs  mod.rs  receive.rs  state.rs  token.rs
nodedb-lite/src/sync/outbound/: columnar.rs  durable_queue.rs  fts.rs  mod.rs  queue.rs  reconcile.rs  spatial.rs  timeseries.rs  vector.rs
nodedb-lite/src/sync/transport/: connect.rs  delegate.rs  dispatch.rs  dispatch_acks.rs  mod.rs  tests.rs
nodedb-lite/tests/: array_lite.rs  array_sync_basic.rs  array_sync_bitemporal.rs  array_sync_catchup.rs  array_sync_concurrent_writers.rs  array_sync_gdpr_erase.rs  array_sync_interop.rs  array_sync_interop_real.rs  array_sync_reject.rs  array_sync_schema.rs  auto_compact.rs  auto_flush.rs  compensation.rs  concurrency.rs  crash_recovery.rs  crdt_movable_list.rs  definition_sync_interop.rs  document_batch_ingest.rs  document_bitemporal_api.rs  document_bitemporal_storage.rs  e2e.rs  encryption_roundtrip.rs  eviction.rs  fts_persistence.rs  fts_persistence_bitemporal.rs  graph_engine_gate.rs  graph_pagerank_api.rs  graph_persistence_bitemporal.rs  graph_stats_parity.rs  htap.rs  implicit_collection_registration.rs  integration.rs  kv_engine_gate.rs  kv_ttl_and_range.rs  select_after_create.rs  shape_perf.rs  sparse_vector.rs  spatial_engine_gate.rs  sql_matrix.rs  sql_parity.rs  (+21 more)
nodedb-lite/tests/common/: clock.rs  harness.rs  mod.rs  ops.rs  origin.rs  schema.rs  sql.rs
nodedb-lite/tests/crdt_semantics/: helpers.rs  mod.rs  policy_resolution.rs  rejection_paths.rs
nodedb-lite/tests/semantics/: clock.rs  compat.rs  dedup.rs  fork.rs  helpers.rs  mod.rs
nodedb-lite/tests/sql_parity/: columnar.rs  document.rs  negative.rs  strict.rs  timeseries.rs
(+119 files in other folders)
