[workspace]
members = [
  "nodedb-lite",
  "nodedb-lite-ffi",
  "nodedb-lite-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NodeDB-Lab/nodedb-lite"
homepage = "https://nodedb.dev"

[workspace.dependencies]
# Internal
nodedb-lite = { path = "nodedb-lite", version = "0.1.0", default-features = false }
nodedb-types = { version = "*" }
nodedb-client = { version = "*" }
nodedb-codec = { version = "*" }
nodedb-crdt = { version = "*" }
nodedb-query = { version = "*" }
nodedb-spatial = { version = "*" }
nodedb-graph = { version = "*" }
nodedb-vector = { version = "*" }
nodedb-fts = { version = "*" }
nodedb-strict = { version = "*" }
nodedb-columnar = { version = "*" }
nodedb-sql = { version = "*" }
nodedb-array = { version = "*" }
nodedb-physical = { version = "*" }

# Async
tokio = { version = "1" }
tokio-tungstenite = "0.29"
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "2.0"
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.5"
zerompk = { version = "0.5", features = ["std", "derive"] }

# Storage
redb = "2"
roaring = "0.11"
arrow = { version = "58", default-features = false, features = ["ipc"] }
crc32c = "0.6"

# CRDTs
loro = "1"

# WASM runtime
wasmtime = { version = "30", default-features = false, features = ["cranelift", "runtime"] }

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
getrandom = { version = "0.3", features = ["std"] }

# Testing
tempfile = "3"
rust_decimal = { version = "1", features = ["serde-with-str"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.ci]
inherits = "dev"
debug = false
incremental = false
