[package]
name = "nodedb-lite-wasm"
description = "JavaScript/TypeScript bindings for NodeDB-Lite via wasm-bindgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable the pagedb OPFS VFS and the persistent-storage JS API.
# This is the default for browser builds — disable only when testing in Node.js
# environments that do not provide the Web Worker API.
default = ["opfs"]
opfs = ["pagedb/opfs"]

[dependencies]
nodedb-lite = { workspace = true }
nodedb-types = { workspace = true }
nodedb-client = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
wasm-bindgen-futures = "0.4"
# pagedb is a direct dep here so we can export `run_opfs_worker` which calls
# into pagedb's OpfsWorker registrar. The `opfs` feature pulls in gloo-worker,
# wasm-bindgen bindings, and the OpfsWorker type itself.
pagedb = { workspace = true, features = ["opfs"] }
web-sys = { version = "0.3", features = [
    "console",
] }
nodedb-array = { workspace = true }
zerompk = { workspace = true }

# `getrandom` 0.3 on wasm32-unknown-unknown requires explicit opt-in to
# the `wasm_js` JS-backed RNG. Pulling it in as a direct dep here with
# the right feature unifies the transitive copy used by other crates to
# a working build on this target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
