[package]
name = "nodedb-lite"
description = "Embedded edge client for NodeDB — offline vector search, graph traversal, and CRDT sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
nodedb-types = { workspace = true }
nodedb-codec = { workspace = true }
nodedb-client = { workspace = true }
nodedb-crdt = { workspace = true }
nodedb-query = { workspace = true }
nodedb-spatial = { workspace = true }
nodedb-graph = { workspace = true }
nodedb-vector = { workspace = true }
nodedb-fts = { workspace = true }
roaring = { workspace = true }
nodedb-strict = { workspace = true }
nodedb-columnar = { workspace = true }
nodedb-array = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
zerompk = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
loro = { workspace = true }
pagedb = { workspace = true }
nodedb-sql = { workspace = true }
nodedb-physical = { workspace = true }
arrow = { workspace = true }
crc32c = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }

# Enable pagedb's OPFS VFS only when building for the browser.
# tokio's `sync` and `rt` modules work on wasm32-unknown-unknown;
# `net`, `time`, and `rt-multi-thread` do not.
[target.'cfg(target_arch = "wasm32")'.dependencies]
pagedb = { workspace = true, features = ["opfs"] }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }

# Async runtime (native only — WASM uses wasm-bindgen-futures)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# `rt` is sufficient — `spawn_blocking` works on `current_thread` and
# `multi_thread` flavors alike. Library code no longer requires the
# `rt-multi-thread` feature now that engines are interior-mutable
# (Sections A-G of LITE_RUNTIME_REFACTOR_CHECKLIST). Tests that
# legitimately need a multi-thread runtime opt in via dev-dependencies.
tokio = { workspace = true, features = ["rt", "sync", "time", "net"] }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tempfile = { workspace = true }
rust_decimal = { workspace = true }
tokio-postgres = { workspace = true }
